// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonTypography component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <span
    class="emotion-0"
  >
    Hello
  </span>
</div>
`;

exports[`Headline component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-headline-lineHeight);
  font-size: var(--pbl-theme-typography-headline-fontSize);
  margin-bottom: var(--pbl-theme-typography-headline-marginBottom);
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`InfoBold component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-infoBold-lineHeight);
  font-size: var(--pbl-theme-typography-infoBold-fontSize);
  margin-bottom: var(--pbl-theme-typography-infoBold-marginBottom);
  font-weight: var(--pbl-theme-typography-infoBold-fontWeight);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`InfoText component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-info-lineHeight);
  font-size: var(--pbl-theme-typography-info-fontSize);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Paragraph component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraph-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`ParagraphBold component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraphBold-marginBottom);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Subtitle component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Title component  Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-title-lineHeight);
  font-size: var(--pbl-theme-typography-title-fontSize);
  margin-bottom: var(--pbl-theme-typography-title-marginBottom);
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant button Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <span
    class="emotion-0"
  >
    Hello
  </span>
</div>
`;

exports[`Typography component with variant button Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
  margin-bottom: 0;
}

<div>
  <span
    class="emotion-0"
  >
    Hello
  </span>
</div>
`;

exports[`Typography component with variant headline Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-headline-lineHeight);
  font-size: var(--pbl-theme-typography-headline-fontSize);
  margin-bottom: var(--pbl-theme-typography-headline-marginBottom);
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component with variant headline Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-headline-lineHeight);
  font-size: var(--pbl-theme-typography-headline-fontSize);
  margin-bottom: var(--pbl-theme-typography-headline-marginBottom);
  margin-bottom: 0;
}

<div>
  <h2
    class="emotion-0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component with variant info Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-info-lineHeight);
  font-size: var(--pbl-theme-typography-info-fontSize);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant info Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-info-lineHeight);
  font-size: var(--pbl-theme-typography-info-fontSize);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant infoBold Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-infoBold-lineHeight);
  font-size: var(--pbl-theme-typography-infoBold-fontSize);
  margin-bottom: var(--pbl-theme-typography-infoBold-marginBottom);
  font-weight: var(--pbl-theme-typography-infoBold-fontWeight);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant infoBold Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-infoBold-lineHeight);
  font-size: var(--pbl-theme-typography-infoBold-fontSize);
  margin-bottom: var(--pbl-theme-typography-infoBold-marginBottom);
  font-weight: var(--pbl-theme-typography-infoBold-fontWeight);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraph Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraph-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraph Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraph-marginBottom);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraphBold Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraphBold-marginBottom);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraphBold Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraphBold-marginBottom);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant subtitle Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component with variant subtitle Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
  margin-bottom: 0;
}

<div>
  <h4
    class="emotion-0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component with variant title Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-title-lineHeight);
  font-size: var(--pbl-theme-typography-title-fontSize);
  margin-bottom: var(--pbl-theme-typography-title-marginBottom);
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant title Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-title-lineHeight);
  font-size: var(--pbl-theme-typography-title-fontSize);
  margin-bottom: var(--pbl-theme-typography-title-marginBottom);
  margin-bottom: 0;
}

<div>
  <h3
    class="emotion-0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant undefined Render component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraph-marginBottom);
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant undefined Render inline component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraph-lineHeight);
  font-size: var(--pbl-theme-typography-paragraph-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraph-marginBottom);
  margin-bottom: 0;
}

<div>
  <p
    class="emotion-0"
  >
    Hello
  </p>
</div>
`;
